Fixed post-grid titles display-table-height on firefox
On Firefox, if an element is display:table, the height property must be
“height,” and “min-height” will do nothing.

--- a/wp-content/themes/mag-wp/css/colors/default.css
+++ b/wp-content/themes/mag-wp/css/colors/default.css
@@ -625,7 +625,7 @@ ul.classic-blog li.post .article-category .tiptipBlog {
 	background-color: #e34848;
 }
 ul.classic-blog li.post h2.article-title.entry-title {
-	min-height: 66px;
+	height: 66px;
 	display: table;
 	vertical-align: middle;
 	margin: 5px 0 0 0;
